<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.minusone.indoorlocationofmuseum.usercontrol.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        style="@style/myteststyle"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@id/test_db"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_db" />

        <Button
            android:id="@id/test_cache"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_cache" />

        <Button
            android:id="@id/test_image_cache"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_image_cache" />

        <Button
            android:id="@id/test_mvc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_mvc" />

        <Button
            android:id="@id/test_http"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_http" />

        <Button
            android:id="@id/test_download"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_download" />

        <Button
            android:id="@id/test_other"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_other" />

        <Button
            android:id="@id/exit_app"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_app" />

        <Button
            android:id="@id/signal_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signal_scan_title" />
    </LinearLayout>
</LinearLayout>
