<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.minusone.indoorlocationofmuseum.usercontrol.TitleBar
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        style="@style/myteststyle"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@id/insert_data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_data" />

        <Button
            android:id="@id/select_data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_data" />

        <Button
            android:id="@id/update_data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_data" />

        <Button
            android:id="@id/delete_data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_data" />

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@id/show_data"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_data" />
        </ScrollView>
    </LinearLayout>
</LinearLayout>