<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:background="@color/dangrey"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_demo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Demo"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <com.minusone.indoorlocationofmuseum.usercontrol.RadarView
                android:id="@+id/counter_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_margin="20dp" />

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Scan"
                android:textAlignment="center"
                android:textAllCaps="false" />

            <LinearLayout
                style="@style/myteststyle"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/friendcacl" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8dp"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                style="@style/myteststyle"
                android:layout_height="81dp"
                android:orientation="vertical">
                <!-- 扫一扫 -->
                <!--
                    引入了style中的innerstyle样式 意思就是
                    设置宽度占满父元素,设置高度40dp,引入Android内置白色,设置内容水平摆放
                 -->
                <LinearLayout style="@style/innerstyle">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/saoyisao" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <!-- 中间线条 -->
                <!--
                    这里一个ImageView控件用来代替扫一扫和摇一摇中间的线条,引入了imagestyle样式
                    设置宽度 295dp设置高度0.5dp,引入color中的声明为grey的颜色
                    设置当前元素在父元素的位置为水平居中
                 -->
                <ImageView style="@style/imagestyle" />
                <!-- 摇一摇 -->
                <!--
                     与上面的扫一扫同样,引入了innerstyle样式
                    设置宽度占满父元素,设置高度40dp,引入Android内置白色,设置内容水平摆放
                 -->
                <LinearLayout style="@style/innerstyle">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/yaoyiyao" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/myteststyle"
                android:layout_height="81dp"
                android:orientation="vertical">
                <!-- 附近的人 -->
                <LinearLayout style="@style/innerstyle">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/shop" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>
                <!-- 中间线条 -->
                <ImageView style="@style/imagestyle" />
                <!-- 漂流瓶 -->
                <LinearLayout style="@style/innerstyle">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/game" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                style="@style/myteststyle"
                android:layout_height="81dp"
                android:orientation="vertical">
                <!-- 附近的人 -->
                <LinearLayout style="@style/innerstyle">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/aroundperson" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>
                <!-- 中间线条 -->
                <ImageView style="@style/imagestyle" />
                <!-- 漂流瓶 -->
                <LinearLayout style="@style/innerstyle">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/piaoping" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>